<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="a11y_green_screen_gallery_button">Open gallery</string>
    <string name="a11y_green_screen_remove_button">Remove green screen</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_annotation_overlay_promo_dismiss">Close</string>
    <string name="accessibility_annotation_overlay_promo_expand">Expand</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_backspace_button">Backspace</string>
    <string name="accessibility_bottom_sheet_close_button">Close</string>
    <string name="accessibility_close">Close</string>
    <string name="accessibility_close_dialog">Close dialog</string>
    <string name="accessibility_collapse">Minimize</string>
    <string name="accessibility_collapse_content">Collapse</string>
    <string name="accessibility_collapse_text">collapse</string>
    <string name="accessibility_context_menu">Menu</string>
    <string name="accessibility_current_account">Current Account</string>
    <string name="accessibility_decrease_playback_speed">Decrease playback speed</string>
    <string name="accessibility_decrement_button_min_limit_reached">Min limit reached</string>
    <string name="accessibility_dislike_video">Dislike</string>
    <string name="accessibility_drag_handler">Drag to reorder. Double tap and hold to drag</string>
    <string name="accessibility_duration_hour">%1$s %2$s %3$s</string>
    <string name="accessibility_duration_minutes">%1$s %2$s</string>
    <string name="accessibility_enter_fullscreen">Enter fullscreen</string>
    <string name="accessibility_exit_fullscreen">Exit fullscreen</string>
    <string name="accessibility_expand_content">Expand</string>
    <string name="accessibility_expand_survey">Expand survey</string>
    <string name="accessibility_expand_text">expand</string>
    <string name="accessibility_expandy_more_button">More tools</string>
    <string name="accessibility_fast_forward">Fast forward</string>
    <string name="accessibility_fast_forward_30_seconds">Fast forward 30 seconds</string>
    <string name="accessibility_go_back">Go back to the previous page</string>
    <string name="accessibility_grid_view_toggle">Show in grid view</string>
    <string name="accessibility_hide_player_controls">Hide controls</string>
    <string name="accessibility_increase_playback_speed">Increase playback speed</string>
    <string name="accessibility_increment_button_max_limit_reached">Max limit reached</string>
    <string name="accessibility_like_video">Like</string>
    <string name="accessibility_link_with_tv_code">Goes to the link with TV Code screen.</string>
    <string name="accessibility_list_view_toggle">Show in list view</string>
    <string name="accessibility_manage_settings">Manage settings</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_multi_select_menu_collapsed">%1$s, menu collapsed</string>
    <string name="accessibility_music_repeat">Repeat</string>
    <string name="accessibility_music_share">Share</string>
    <string name="accessibility_music_shuffle">Shuffle</string>
    <string name="accessibility_next">Next video</string>
    <string name="accessibility_next_track_disabled">Next track disabled</string>
    <string name="accessibility_next_track_enabled">Next track</string>
    <string name="accessibility_open_keyboard_button">Open Keyboard</string>
    <string name="accessibility_parent_tools_toolbar_back">back</string>
    <string name="accessibility_pause">Pause video</string>
    <string name="accessibility_play">Play video</string>
    <string name="accessibility_play_all">Play all</string>
    <string name="accessibility_play_all_button">Play all button</string>
    <string name="accessibility_playback_rate">Set Playback Speed</string>
    <string name="accessibility_playback_rate_05">Set Playback Speed 0.5x</string>
    <string name="accessibility_playback_rate_08">Set Playback Speed 0.8x</string>
    <string name="accessibility_playback_rate_10">Set Playback Speed 1x</string>
    <string name="accessibility_playback_rate_12">Set Playback Speed 1.2x</string>
    <string name="accessibility_playback_rate_15">Set Playback Speed 1.5x</string>
    <string name="accessibility_playback_rate_18">Set Playback Speed 1.8x</string>
    <string name="accessibility_playback_rate_20">Set Playback Speed 2.0x</string>
    <string name="accessibility_playback_rate_25">Set Playback Speed 2.5x</string>
    <string name="accessibility_playback_rate_30">Set Playback Speed 3.0x</string>
    <string name="accessibility_player_progress_time">%1$s of %2$s</string>
    <string name="accessibility_previous">Previous video</string>
    <string name="accessibility_previous_track_disabled">Previous track disabled</string>
    <string name="accessibility_previous_track_enabled">Previous track</string>
    <string name="accessibility_repeat_disabled">Repeat disabled</string>
    <string name="accessibility_repeat_off">Repeat off</string>
    <string name="accessibility_repeat_on">Repeat on</string>
    <string name="accessibility_repeat_one">Repeat one</string>
    <string name="accessibility_replay">Replay video</string>
    <string name="accessibility_rewind">Rewind 10 seconds</string>
    <string name="accessibility_save_to_library">Save to library</string>
    <string name="accessibility_scrubbed_preview">Scrubbed preview</string>
    <string name="accessibility_search_clear">Clear search</string>
    <string name="accessibility_search_edit_suggestion">Edit suggestion %1$s</string>
    <string name="accessibility_see_more_button">See more button</string>
    <string name="accessibility_select_thumbnail">Select this thumbnail</string>
    <string name="accessibility_send_button">Send reply</string>
    <string name="accessibility_send_comment_button">Send comment</string>
    <string name="accessibility_send_share">Share</string>
    <string name="accessibility_share">Share</string>
    <string name="accessibility_share_target">App</string>
    <string name="accessibility_shuffle_disabled">Shuffle disabled</string>
    <string name="account">Account</string>
    <string name="app_name">YouTube Music</string>
    <string name="app_widget_preview_artist">Shaboozey</string>
    <string name="app_widget_preview_song">Highway</string>
    <string name="auto_offline_title">Smart downloads</string>
    <string name="dont_play_video_setting_byline">Switch music videos to audio-only or album versions of songs</string>
    <string name="dont_play_video_setting_title">Don’t play music videos</string>
    <string name="en_dash">–</string>
    <string name="music_pref_double_tap_skip_duration_title">Double-tap to seek</string>
    <string name="music_pref_double_tap_skip_entry_default">10</string>
    <string name="offline_mixtape_storage_settings">Downloads settings</string>
    <string name="pref_allow_external_devices_to_start_playback_summary">For example, car Bluetooth, wired headsets</string>
    <string name="pref_allow_external_devices_to_start_playback_title">Allow external devices to start playback</string>
    <string name="pref_audio_bitrate_mobile_title">Audio quality on mobile network</string>
    <string name="pref_audio_bitrate_wifi_title">Audio quality on Wi-Fi</string>
    <string name="pref_enable_smart_download_recent_music_title">Recently played songs</string>
    <string name="pref_equalizer_summary">Adjust audio settings</string>
    <string name="pref_equalizer_title">Equalizer</string>
    <string name="pref_limit_mobile_data_usage_summary">Only stream HD video on Wi-Fi</string>
    <string name="pref_limit_mobile_data_usage_title">Limit mobile data usage</string>
    <string name="pref_music_clear_offline">Clear downloads</string>
    <string name="pref_music_subtitles_category">Captions</string>
    <string name="pref_nerd_stats_enabled">Enable stats for nerds</string>
    <string name="pref_offline_audio_quality">Audio quality</string>
    <string name="pref_offline_insert_sd_card_summary">Insert an SD card to choose where downloads go</string>
    <string name="pref_offline_insert_sd_card_title">Insert an SD card</string>
    <string name="pref_offline_mixtape_only_wifi">Download over Wi-Fi only</string>
    <string name="pref_offline_mixtape_quality">Media quality</string>
    <string name="pref_offline_storage_title">Storage</string>
    <string name="pref_offline_storage_title_sdcard">SD card storage</string>
    <string name="pref_offline_use_sd_card_summary">Download music to the SD card</string>
    <string name="pref_offline_use_sd_card_title">Use SD card</string>
    <string name="pref_privacy_and_data_controls_title">Privacy &amp; data</string>
    <string name="pref_restricted_mode_summary">Filter mature content</string>
    <string name="pref_safety_mode_summary">Restricted Mode hides songs and videos that may contain inappropriate content flagged by users and other signals. No filter is 100% accurate, but it should help you avoid most inappropriate content.</string>
    <string name="pref_safety_mode_title">Restricted mode</string>
    <string name="pref_shake_to_send_feedback">Shake to send feedback</string>
    <string name="pref_show_device_files">Show device files</string>
    <string name="pref_show_device_files_summary">Show all audio files on your device</string>
    <string name="pref_stream_over_wifi_only_summary">Streaming over wifi and unmetered data only helps reduce mobile data usage</string>
    <string name="pref_stream_over_wifi_only_title">Stream via Wi-Fi only</string>
    <string name="search">Search</string>
    <string name="settings_developer_title">Developer</string>
    <string name="settings_dogfood_title">Dogfood</string>
    <string name="settings_general_title">General</string>
    <string name="settings_header_about_youtube_music">About YouTube Music</string>
    <string name="settings_header_data_saving">Data saving</string>
    <string name="settings_header_downloads_and_storage">Downloads &amp; storage</string>
    <string name="settings_header_notifications">Notifications</string>
    <string name="settings_header_paid_memberships">Paid memberships</string>
    <string name="settings_header_playback">Playback</string>
    <string name="settings_header_recommendations">Recommendations</string>
    <string name="settings_header_restricted_mode">Restricted mode</string>
    <string name="title_history_new">History</string>
    <string name="widget_album_art_content_description">Album art. Click to open YouTube Music.</string>
    <string name="morphe_settings_title">Morphe</string>
</resources>