<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yt="http://schemas.android.com/apk/res-auto">
    <com.google.android.apps.youtube.music.ui.preference.StorageBarPreference android:persistent="false" android:title="@string/pref_offline_storage_title" android:key="offline_category_primary_storage" yt:forSdCard="false" />
    <com.google.android.apps.youtube.music.ui.preference.StorageBarPreference android:persistent="false" android:title="@string/pref_offline_storage_title_sdcard" android:key="offline_category_sdcard_storage" yt:forSdCard="true" />
    <Preference android:persistent="false" android:enabled="false" android:title="@string/pref_offline_insert_sd_card_title" android:selectable="false" android:key="offline_insert_sd_card" android:summary="@string/pref_offline_insert_sd_card_summary" />
    <com.google.android.apps.youtube.music.ui.preference.SwitchCompatPreference android:persistent="false" android:title="@string/pref_offline_use_sd_card_title" android:key="offline_use_sd_card" android:summary="@string/pref_offline_use_sd_card_summary" android:defaultValue="false" />
    <com.google.android.apps.youtube.music.ui.preference.SwitchCompatPreference android:persistent="false" android:title="@string/pref_show_device_files" android:key="show_device_files" android:summary="@string/pref_show_device_files_summary" android:defaultValue="true" />
    <com.google.android.apps.youtube.music.ui.preference.SwitchCompatPreference android:persistent="false" android:title="@string/pref_offline_mixtape_only_wifi" android:key="offline_policy" android:defaultValue="true" />
    <ListPreference android:persistent="false" android:title="@string/pref_offline_audio_quality" android:key="offline_audio_quality" android:summary="%s" />
    <ListPreference android:persistent="false" android:title="@string/pref_offline_mixtape_quality" android:key="offline_quality" android:summary="%s" />
    <com.google.android.apps.youtube.music.ui.preference.SwitchCompatPreference android:persistent="false" android:title="@string/auto_offline_title" android:key="enable_auto_offline" android:defaultValue="false" />
    <com.google.android.apps.youtube.music.ui.preference.SeekBarPreference android:persistent="false" android:layout="@layout/auto_offline_tracks_preference" android:key="auto_offline_max_num_songs" android:defaultValue="20" yt:allowDividerAbove="false" yt:hideIfDisabled="true" />
    <com.google.android.apps.youtube.music.ui.preference.SwitchCompatPreference android:persistent="false" android:title="@string/pref_enable_smart_download_recent_music_title" android:key="pref_enable_smart_download_recent_music" android:defaultValue="true" />
    <Preference android:title="@string/pref_music_clear_offline" android:key="clear_offline" />
</PreferenceScreen>
