<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.apps.youtube.music.ui.preference.PreferenceCategoryCompat android:persistent="false" android:key="pref_key_settings_general">
        <ListPreference android:persistent="true" android:title="@string/pref_audio_bitrate_mobile_title" android:key="BitrateAudioMobile" android:summary="%s" android:defaultValue="Normal" />
        <ListPreference android:persistent="true" android:title="@string/pref_audio_bitrate_wifi_title" android:key="BitrateAudioWiFi" android:summary="%s" android:defaultValue="Normal" />
        <com.google.android.apps.youtube.music.ui.preference.ProtoDataStoreSwitchCompatPreferences android:persistent="false" android:title="@string/pref_limit_mobile_data_usage_title" android:key="limit_mobile_data_usage" android:summary="@string/pref_limit_mobile_data_usage_summary" android:defaultValue="false" />
        <com.google.android.apps.youtube.music.ui.preference.SwitchCompatPreference android:persistent="true" android:title="@string/pref_stream_over_wifi_only_title" android:key="stream_over_wifi_only" android:summary="@string/pref_stream_over_wifi_only_summary" />
        <com.google.android.apps.youtube.music.ui.preference.SwitchCompatPreference android:persistent="true" android:title="@string/dont_play_video_setting_title" android:key="pref_key_dont_play_video" android:summary="@string/dont_play_video_setting_byline" />
        <com.google.android.apps.youtube.music.ui.preference.SwitchCompatPreference android:persistent="false" android:title="" android:key="pref_key_dont_play_nma_video" android:summary="" android:defaultValue="false" />
    </com.google.android.apps.youtube.music.ui.preference.PreferenceCategoryCompat>
</PreferenceScreen>
