<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.apps.youtube.music.ui.preference.PreferenceCategoryCompat android:persistent="false" android:key="pref_key_settings_general">
        <Preference android:persistent="false" android:title="@string/pref_equalizer_title" android:key="equalizer" android:summary="@string/pref_equalizer_summary" />
        <com.google.android.apps.youtube.music.ui.preference.ProtoDataStoreSwitchCompatPreferences android:persistent="false" android:title="@string/pref_allow_external_devices_to_start_playback_title" android:key="pref_allow_external_devices_to_start_playback" android:summary="@string/pref_allow_external_devices_to_start_playback_summary" android:defaultValue="true" />
        <com.google.android.libraries.youtube.common.ui.preferences.ProtoDataStoreListPreference android:persistent="false" android:entries="@array/double_tap_length_entries" android:title="@string/music_pref_double_tap_skip_duration_title" android:key="double_tap_skip_duration" android:summary="%s" android:defaultValue="@string/music_pref_double_tap_skip_entry_default" android:entryValues="@array/double_tap_length_values" />
        <com.google.android.apps.youtube.music.ui.preference.PreferenceCategoryCompat android:persistent="false" android:orderingFromXml="true" android:key="pref_key_dynamic_queue" />
    </com.google.android.apps.youtube.music.ui.preference.PreferenceCategoryCompat>
</PreferenceScreen>
