<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yt="http://schemas.android.com/apk/res-auto">
    <com.google.android.apps.youtube.music.ui.preference.PreferenceCategoryCompat android:persistent="false" android:key="pref_key_settings_general">
        <com.google.android.apps.youtube.music.settings.preference.SelectablePreference android:persistent="false" android:title="@string/settings_header_restricted_mode" android:key="settings_header_restricted_mode" android:summary="@string/pref_restricted_mode_summary" android:fragment="com.google.android.apps.youtube.music.settings.fragment.RestrictedModeSettingsFragment" yt:allowDividerAbove="false" yt:allowDividerBelow="false" />
        <com.google.android.apps.youtube.music.ui.preference.SwitchCompatPreference android:persistent="true" android:enabled="false" android:title="@string/pref_safety_mode_title" android:key="innertube_managed_restricted_mode" />
        <com.google.android.libraries.youtube.common.ui.preferences.ProtoDataStoreSwitchPreference android:persistent="false" android:title="@string/pref_safety_mode_title" android:key="innertube_safety_mode_enabled" android:summary="@string/pref_safety_mode_summary" />
        <Preference android:persistent="false" android:title="@string/pref_music_subtitles_category" android:key="system_subtitles">
            <intent android:action="android.settings.CAPTIONING_SETTINGS" />
        </Preference>
        <com.google.android.apps.youtube.music.ui.preference.ProtoDataStoreSwitchCompatPreferences android:persistent="false" android:title="@string/pref_nerd_stats_enabled" android:key="nerd_stats_enabled" android:defaultValue="false" yt:iconSpaceReserved="false" />
        <com.google.android.apps.youtube.music.ui.preference.SwitchCompatPreference android:persistent="true" android:visibility="visible" android:title="@string/pref_shake_to_send_feedback" android:key="pref_key_shake_to_send_feedback" android:defaultValue="false" />
    </com.google.android.apps.youtube.music.ui.preference.PreferenceCategoryCompat>
</PreferenceScreen>
