<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference android:title="@string/morphe_settings_title">
        <intent android:targetPackage="app.morphe.android.apps.youtube.music" android:data="morphe_settings_intent" android:targetClass="com.google.android.gms.common.api.GoogleApiActivity" />
    </Preference>
    <Preference android:persistent="false" android:key="pref_key_parent_tools" app:allowDividerAbove="false" app:allowDividerBelow="false" />
    <com.google.android.apps.youtube.music.settings.preference.SelectablePreference android:persistent="false" android:title="@string/settings_general_title" android:key="settings_header_general" android:fragment="com.google.android.apps.youtube.music.settings.fragment.GeneralSettingsFragment" app:allowDividerAbove="false" app:allowDividerBelow="false" />
    <com.google.android.apps.youtube.music.settings.preference.SelectablePreference android:persistent="false" android:title="@string/settings_header_playback" android:key="settings_header_playback" android:fragment="com.google.android.apps.youtube.music.settings.fragment.PlaybackSettingsFragment" app:allowDividerAbove="false" app:allowDividerBelow="false" />
    <com.google.android.apps.youtube.music.settings.preference.SelectablePreference android:persistent="false" android:title="@string/settings_header_data_saving" android:key="settings_header_data_saving" android:fragment="com.google.android.apps.youtube.music.settings.fragment.DataSavingSettingsFragment" app:allowDividerAbove="false" app:allowDividerBelow="false" />
    <com.google.android.apps.youtube.music.settings.preference.SelectablePreference android:persistent="false" android:title="@string/settings_header_downloads_and_storage" android:key="settings_header_downloads_and_storage" android:fragment="com.google.android.apps.youtube.music.settings.fragment.OfflineSettingsFragmentCompat" app:allowDividerAbove="false" app:allowDividerBelow="false" />
    <com.google.android.apps.youtube.music.settings.preference.SelectablePreference android:persistent="false" android:title="@string/settings_header_notifications" android:key="settings_header_notifications" android:fragment="com.google.android.apps.youtube.music.settings.fragment.NotificationsSettingsFragment" app:allowDividerAbove="false" app:allowDividerBelow="false" />
    <com.google.android.apps.youtube.music.settings.preference.SelectablePreference android:persistent="false" android:title="@string/pref_privacy_and_data_controls_title" android:key="settings_header_privacy_and_location" android:fragment="com.google.android.apps.youtube.music.settings.fragment.PrivacyPrefsFragmentCompat" app:allowDividerAbove="false" app:allowDividerBelow="false" />
    <com.google.android.apps.youtube.music.settings.preference.SelectablePreference android:persistent="false" android:title="@string/settings_header_recommendations" android:key="settings_header_recommendations" android:fragment="com.google.android.apps.youtube.music.settings.fragment.RecommendationsSettingsFragment" app:allowDividerAbove="false" app:allowDividerBelow="false" />
    <Preference android:persistent="false" android:visible="false" android:title="@string/settings_header_paid_memberships" android:key="settings_header_paid_memberships" app:allowDividerAbove="false" app:allowDividerBelow="false" />
    <com.google.android.apps.youtube.music.settings.preference.SelectablePreference android:persistent="false" android:title="@string/settings_dogfood_title" android:key="settings_header_dogfood_settings" android:fragment="com.google.android.apps.youtube.music.settings.dogfood.DogfoodPrefsFragmentCompat" app:allowDividerAbove="false" app:allowDividerBelow="false" />
    <com.google.android.apps.youtube.music.settings.preference.SelectablePreference android:persistent="false" android:title="@string/settings_developer_title" android:key="settings_header_developer_settings" android:fragment="com.google.android.apps.youtube.music.settings.developer.DeveloperPrefsFragmentCompat" app:allowDividerAbove="false" app:allowDividerBelow="false" />
    <com.google.android.apps.youtube.music.settings.preference.SelectablePreference android:persistent="false" android:title="@string/settings_header_about_youtube_music" android:key="settings_header_about_youtube_music" android:fragment="com.google.android.apps.youtube.music.settings.fragment.AboutSettingsFragment" app:allowDividerAbove="false" app:allowDividerBelow="false" />
</PreferenceScreen>
