<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/album_art" android:focusable="true" android:layout_width="@dimen/widget_music_legacy_album_art_size" android:layout_height="@dimen/widget_music_legacy_album_art_size" android:src="@drawable/shaboozey_preview" android:scaleType="centerCrop" android:contentDescription="@string/widget_album_art_content_description" />
    <LinearLayout android:orientation="vertical" android:id="@id/widget_right_panel" android:background="@color/ytm_widget_background_shaboozey" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@id/metadata_container" android:paddingLeft="@dimen/widget_music_small_text_padding" android:paddingTop="@dimen/widget_music_small_text_padding_top" android:paddingRight="@dimen/widget_music_small_text_padding" android:focusable="true" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0" android:paddingStart="@dimen/widget_music_small_text_padding" android:paddingEnd="@dimen/widget_music_small_text_padding">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/ytm_widget_primary_text_shaboozey" android:ellipsize="end" android:gravity="bottom" android:id="@id/trackname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_widget_preview_song" android:singleLine="true" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/ytm_widget_body_text_shaboozey" android:ellipsize="end" android:gravity="bottom" android:id="@id/dash" android:paddingLeft="4.0dp" android:paddingRight="4.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/en_dash" android:paddingStart="4.0dp" android:paddingEnd="4.0dp" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/ytm_widget_body_text_shaboozey" android:ellipsize="end" android:gravity="bottom" android:id="@id/byline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_widget_preview_artist" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/controls_container" android:padding="1.0dp" android:focusable="true" android:layout_width="match_parent" android:layout_height="@dimen/widget_music_small_controls_height" android:weightSum="5.0" android:layoutDirection="ltr">
            <ImageButton android:id="@id/dislike_button" android:background="@drawable/ripple" android:clickable="false" android:layout_width="0.0dp" android:layout_height="@dimen/widget_music_button_min_height" android:src="@drawable/yt_outline_thumb_down_white_24" android:layout_weight="1.0" android:contentDescription="@string/accessibility_dislike_video" />
            <ImageButton android:id="@id/previous_button" android:background="@drawable/ripple" android:clickable="false" android:layout_width="0.0dp" android:layout_height="@dimen/widget_music_button_min_height" android:src="@drawable/quantum_ic_skip_previous_white_36" android:layout_weight="1.0" android:contentDescription="@string/accessibility_previous" />
            <ImageButton android:id="@id/play_pause_button" android:background="@drawable/ripple" android:clickable="false" android:layout_width="0.0dp" android:layout_height="@dimen/widget_music_button_min_height" android:src="@drawable/quantum_ic_play_arrow_white_36" android:layout_weight="1.0" android:contentDescription="@string/accessibility_play" />
            <ImageButton android:id="@id/next_button" android:background="@drawable/ripple" android:clickable="false" android:layout_width="0.0dp" android:layout_height="@dimen/widget_music_button_min_height" android:src="@drawable/quantum_ic_skip_next_white_36" android:layout_weight="1.0" android:contentDescription="@string/accessibility_next" />
            <ImageButton android:id="@id/like_button" android:background="@drawable/ripple" android:clickable="false" android:layout_width="0.0dp" android:layout_height="@dimen/widget_music_button_min_height" android:src="@drawable/yt_outline_thumb_up_white_24" android:layout_weight="1.0" android:contentDescription="@string/accessibility_like_video" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
