<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/album_art" android:focusable="true" android:layout_width="@dimen/widget_music_legacy_album_art_size" android:layout_height="@dimen/widget_music_legacy_album_art_size" android:src="@drawable/empty_state_cover_square" android:scaleType="centerCrop" android:contentDescription="@string/widget_album_art_content_description" />
    <LinearLayout android:orientation="vertical" android:id="@id/widget_right_panel" android:background="@color/ytm_color_grey_10" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@id/metadata_container" android:paddingLeft="@dimen/widget_music_small_text_padding" android:paddingTop="@dimen/widget_music_small_text_padding_top" android:paddingRight="@dimen/widget_music_small_text_padding" android:focusable="true" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0" android:paddingStart="@dimen/widget_music_small_text_padding" android:paddingEnd="@dimen/widget_music_small_text_padding">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/widget_music_disabled_title_color" android:ellipsize="end" android:gravity="bottom" android:id="@id/trackname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:singleLine="true" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:ellipsize="end" android:gravity="bottom" android:id="@id/dash" android:paddingLeft="4.0dp" android:paddingRight="4.0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/en_dash" android:paddingStart="4.0dp" android:paddingEnd="4.0dp" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:ellipsize="end" android:gravity="bottom" android:id="@id/byline" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/controls_container" android:padding="1.0dp" android:focusable="true" android:layout_width="match_parent" android:layout_height="@dimen/widget_music_small_controls_height" android:weightSum="5.0" android:layoutDirection="ltr">
            <ImageButton android:id="@id/dislike_button" android:background="@drawable/ripple" android:clickable="false" android:layout_width="0.0dp" android:layout_height="@dimen/widget_music_button_min_height" android:src="@drawable/ic_thumb_down_outline_white_disabled" android:layout_weight="1.0" android:contentDescription="@string/accessibility_dislike_video" />
            <ImageButton android:id="@id/previous_button" android:background="@drawable/ripple" android:clickable="false" android:layout_width="0.0dp" android:layout_height="@dimen/widget_music_button_min_height" android:src="@drawable/ic_skip_previous_white_disabled_36" android:layout_weight="1.0" android:contentDescription="@string/accessibility_previous" />
            <ImageButton android:id="@id/play_pause_button" android:background="@drawable/ripple" android:clickable="false" android:layout_width="0.0dp" android:layout_height="@dimen/widget_music_button_min_height" android:src="@drawable/ic_play_arrow_white_disabled_36" android:layout_weight="1.0" android:contentDescription="@string/accessibility_play" />
            <ImageButton android:id="@id/next_button" android:background="@drawable/ripple" android:clickable="false" android:layout_width="0.0dp" android:layout_height="@dimen/widget_music_button_min_height" android:src="@drawable/ic_skip_next_white_disabled_36" android:layout_weight="1.0" android:contentDescription="@string/accessibility_next" />
            <ImageButton android:id="@id/like_button" android:background="@drawable/ripple" android:clickable="false" android:layout_width="0.0dp" android:layout_height="@dimen/widget_music_button_min_height" android:src="@drawable/ic_thumb_up_outline_white_disabled" android:layout_weight="1.0" android:contentDescription="@string/accessibility_like_video" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
